--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               />
             </g>
           </svg>
-          <p class="features-title">Sedans</p>
+          <h2 class="features-title">Sedans</h2>
           <p class="features-text">
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
@@ -82,7 +82,7 @@
               />
             </g>
           </svg>
-          <p class="features-title">SUVs</p>
+          <h2 class="features-title">SUVs</h2>
           <p class="features-text">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
@@ -105,7 +105,7 @@
               />
             </g>
           </svg>
-          <p class="features-title">Luxury</p>
+          <h2 class="features-title">Luxury</h2>
           <p class="features-text">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
