--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
+    <section role="main">
       <div class="grid-3-cols">
         <div class="sedan">
           <svg
